# axyn-matrix

./: Cargo.toml  README.md  flake.nix  nixos.nix  rustfmt.toml  setup.py
.github/workflows/: build.yml
axyn_matrix/: __main__.py  callbacks.py
initial_responder/: default.nix
initial_responder/cornell_movie_dialogs_corpus/: build.py  default.nix
initial_responder/craigslist_bargains/: build.py  default.nix
initial_responder/shakespeare/: build.py  default.nix
src/: main.rs  matrix.rs  matrix_api.rs  matrix_body.rs  matrix_event_handlers.rs  store.rs  vectors.rs
