[package]
name = "axyn"
version = "0.1.0"
edition = "2021"

[dependencies]
# Data storage
dirs = "^4.0"
sled = "^0.34"
serde_cbor = "^0.11"

# Nearest neighbour search
hnsw = "^0.11"
rand_pcg = "^0.3"
space = "^0.17"  # Must be the same version of Space as used by HNSW

# Randomisation
rand = "^0.8"

# Matrix client
anyhow = "^1.0"
matrix-sdk = "^0.5"
matrix-sdk-sled = "^0.1"
tokio = { version = "^1.19", features = ["full"] }
